integration_tests/codegen_fail/fail/union/trait_wrong_method_input_args.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: GraphQL union expects trait method to accept `&self` only and, optionally, `&Context`
 --> $DIR/trait_wrong_method_input_args.rs:5:10
  |
5 |     fn a(&self, ctx: &(), rand: u8) -> Option<&Human>;
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Unions
